--- a/src/Niepi/BlogBundle/Resources/views/layout.html.twig
+++ b/src/Niepi/BlogBundle/Resources/views/layout.html.twig
@@ -29,11 +29,24 @@
   </head>
 
   <body>
-        {% block navbar %}{% endblock %}
-    <div class="container">
+        {% block navbar %}
+            <div class="navbar navbar-fixed-top">
+              <div class="navbar-inner">
+                <div class="container">
+                  <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                  </a>
+                  <a class="brand" href="#">Niepi Blog</a>
+                </div>
+              </div>
+            </div>
+        {% endblock %}
 
         {% block content %}{% endblock %}
-    </div> <!-- /container -->
+
+
 
     <!-- Le javascript
     ================================================== -->
