added admin login button, default option getter

--- a/src/Niepi/BlogBundle/Resources/views/layout.html.twig
+++ b/src/Niepi/BlogBundle/Resources/views/layout.html.twig
@@ -38,7 +38,8 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                   </a>
-                  <a class="brand" href="#">Niepi Blog</a>
+                  <a class="brand" href="{{ path('_blog') }}">Niepi Blog</a>
+                  <p class="navbar-text pull-right">Logged in as <a href="{{ path('_admin_index') }}">Admin</a></p>
                 </div>
               </div>
             </div>
