--- a/src/Niepi/BlogBundle/Resources/views/Admin/index.html.twig
+++ b/src/Niepi/BlogBundle/Resources/views/Admin/index.html.twig
@@ -8,7 +8,7 @@
             <ul class="nav nav-list">
               <li class="nav-header">Sidebar</li>
               <li class="active"><a href="{{ path('_admin_index') }}">Dashboard</a></li>
-              <li><a href="{{ path('_post_list') }}">Posts</a></li>
+              <li><a href="{{ path('_posts_list') }}">Posts</a></li>
               <li><a href="{{ path('_comments_list') }}">Comments</a></li>
               <li><a href="#">Config</a></li>
             </ul>
