--- a/src/Niepi/BlogBundle/Resources/views/Comments/list.html.twig
+++ b/src/Niepi/BlogBundle/Resources/views/Comments/list.html.twig
@@ -8,7 +8,7 @@
             <ul class="nav nav-list">
               <li class="nav-header">Sidebar</li>
               <li ><a href="{{ path('_admin_index') }}">Dashboard</a></li>
-              <li><a href="{{ path('_comments_list') }}">Posts</a></li>
+              <li><a href="{{ path('_posts_list') }}">Posts</a></li>
               <li class="active"><a href="{{ path('_comments_list') }}">Comments</a></li>
               <li><a href="#">Config</a></li>
             </ul>
@@ -32,7 +32,7 @@
                   <td>{{ comment.id }}</td>
                   <td>{{ comment.email }}</td>
                   <td>{{ comment.content }}</td>
-                  <td><a href="{{ path('_comments_delete', { 'id': post.id }) }}"><i class="icon-trash"></i></a></td>
+                  <td><a href="{{ path('_comments_delete', { 'id': comment.id }) }}"><i class="icon-trash"></i></a></td>
                 </tr>
                 {% endfor %}
               </tbody>
