moved create comments action to blog controller

--- a/src/Niepi/BlogBundle/Resources/views/Blog/detail.html.twig
+++ b/src/Niepi/BlogBundle/Resources/views/Blog/detail.html.twig
@@ -13,7 +13,7 @@
 			</time>
 			</p>
 			<p>
-	            <form action="{{ path('_comments_create') }}" method="post" {{ form_enctype(form) }}>
+	            <form action="{{ path('_blog_createComment') }}" method="post" {{ form_enctype(form) }}>
 	              {{ form_widget(form) }}
 	              <input type="submit" />
 	            </form>
