--- a/src/Niepi/BlogBundle/Resources/views/Posts/list.html.twig
+++ b/src/Niepi/BlogBundle/Resources/views/Posts/list.html.twig
@@ -18,6 +18,7 @@
                   <td>#</td>
                   <th>Title</th>
                   <th>Content</th>
+                  <th>Date Created</th>
                   <th></th>
                 </tr>
               </thead>
@@ -27,6 +28,7 @@
                   <td>{{ post.id }}</td>
                   <td>{{ post.title }}</td>
                   <td>{{ post.content }}</td>
+                  <td>{{ post.dateCreated|date("F jS \\a\\t g:ia") }}</td>
                   <td><a href="{{ path('_posts_create', { 'id': post.id }) }}"><i class="icon-pencil"></i></a> <a href="{{ path('_posts_delete', { 'id': post.id }) }}"><i class="icon-trash"></i></a></td>
                 </tr>
                 {% endfor %}
